--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isbot": "^5.1.31",
     "jotai": "^2.15.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
