--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@videojs/http-streaming": "^3.17.2",
     "daisyui": "^5.3.2",
     "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
     "jotai": "^2.15.0",
     "js-cookie": "^3.0.5",
