--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-router/serve": "^7.9.2",
     "@tanstack/react-query": "^5.90.3",
     "@videojs/http-streaming": "^3.17.2",
+    "axios": "^1.12.2",
     "daisyui": "^5.3.2",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "hls-parser": "^0.15.0",
     "isbot": "^5.1.31",
     "jotai": "^2.15.0",
     "js-cookie": "^3.0.5",
