--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.9.2",
     "@tanstack/react-query": "^5.90.3",
     "@videojs/http-streaming": "^3.17.2",
+    "@videojs/themes": "^1.0.1",
     "axios": "^1.12.2",
     "daisyui": "^5.3.2",
     "embla-carousel-autoplay": "^8.6.0",
@@ -23,6 +24,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-all-player": "^2.0.10",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router": "^7.9.2",
