--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "nanoid": "^5.1.6",
+    "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-all-player": "^2.0.10",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router": "^7.9.2",
+    "react-scan": "^0.4.3",
     "remix-utils": "^9.0.0",
     "rr-next-routes": "^0.0.10",
     "sonner": "^2.0.7",
+    "ulid": "^3.0.1",
     "video.js": "^8.23.4",
     "videojs-hls-quality-selector": "^2.0.0",
     "zustand": "^5.0.8"
