--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "@tanstack/react-query": "^5.90.3",
+    "@types/lodash": "^4.17.20",
     "@videojs/http-streaming": "^3.17.2",
     "@videojs/themes": "^1.0.1",
     "axios": "^1.12.2",
@@ -22,6 +23,8 @@
     "isbot": "^5.1.31",
     "jotai": "^2.15.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
     "nanoid": "^5.1.6",
     "pocketbase": "^0.26.2",
