--- a/package.json
+++ b/package.json
@@ -34,10 +34,15 @@
     "react-hook-form": "^7.65.0",
     "react-router": "^7.9.2",
     "react-scan": "^0.4.3",
+    "react-timer-hook": "^4.0.5",
+    "react-timer-hook-ts": "^1.0.0",
+    "react-use-timer-hook": "^0.2.1",
     "remix-utils": "^9.0.0",
     "rr-next-routes": "^0.0.10",
     "sonner": "^2.0.7",
     "ulid": "^3.0.1",
+    "use-simple-timer": "^1.0.6",
+    "use-timer": "^2.0.1",
     "video.js": "^8.23.4",
     "videojs-hls-quality-selector": "^2.0.0",
     "zustand": "^5.0.8"
